[tool.poetry]
name = "prueva-despliegue"
version = "0.1.0"
description = ""
authors = ["Brandon <bg4710699@gmail.com>"]
readme = "README.md"
packages = [{include = "prueva_despliegue"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^2.2.8"
gunicorn = "^21.2.0"
importlib-metadata = "^4.13.0"
