[tool.poetry]
name = "prueva-despliegue"
version = "0.1.0"
description = ""
authors = ["Brandon <bg4710699@gmail.com>"]
readme = "README.md"
packages = [{include = "User" }]

[tool.poetry.dependencies]
python = "^3.10.9"
django-cors-headers = "^4.2.0"
django = "^4.2.5"
gunicorn = "^21.2.0"
whitenoise = "^6.5.0"




